@@ -4,6 +4,7 @@ package com.yahoo.search.query.ranking;
 import com.yahoo.search.query.profile.types.FieldDescription;
 import com.yahoo.search.query.profile.types.QueryProfileType;
 
+import java.util.Locale;
 import java.util.Objects;
 
 /**
@@ -40,7 +41,7 @@ public class WeakAnd implements Cloneable {
 
     private static void validateRange(String field, double v, double lboundIncl, double uboundIncl) {
         if (v < lboundIncl || v > uboundIncl) {
-            throw new IllegalArgumentException("%s must be in the range [%.1f, %.1f]. It is %.1f".formatted(field, lboundIncl, uboundIncl, v));
+            throw new IllegalArgumentException(String.format(Locale.US, "%s must be in the range [%.1f, %.1f]. It is %.1f", field, lboundIncl, uboundIncl, v));
         }
     }
 
